--- a/validator/templates/validator/datasets.html
+++ b/validator/templates/validator/datasets.html
@@ -1,4 +1,4 @@
-{% extends 'validator/login_base.html' %}
+{% extends 'validator/base.html' %}
 
 {% block content %}
 
@@ -70,8 +70,8 @@
         <tr>
             <th scope="row">H-SAF ASCAT SSM CDR</th>
             <td>
-                The ASCAT dataset from the EUMETSAT H-SAF portal provides global daily soil moisture observations on a discrete 
-                global grid (DGG) with a spatial resolution of 25 km. Observations are provided from the ASCAT instrument on-board 
+                The ASCAT dataset from the EUMETSAT H-SAF portal provides global daily soil moisture observations on a discrete
+                global grid (DGG) with a spatial resolution of 25 km. Observations are provided from the ASCAT instrument on-board
                 both Metop-A and Metop-B (<a target="_blank" href="http://hsaf.meteoam.it/description-h25-h108-h111.php">more information</a>).</td>
             <td>The QA4SM tool supports version H113 of the H-SAF ASCAT SSM CDR product.</td>
             <td>The data can be downloaded from the product homepage <a target="_blank" href="#TODO">TODO</a>.</td>
@@ -88,7 +88,7 @@
             </td>
         </tr>
         </tbody>
-	</table> 
+	</table>
 
     <br>
 	<a id="ref"></a><h1 class="h3 mb-3 font-weight-normal">Datasets - Reference Data</h1>
