--- a/validator/static/css/login.css
+++ b/validator/static/css/login.css
@@ -11,6 +11,7 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f5f5f5;
+  flex-direction: column;
 }
 
 .form-signin {
