Fixing template to correct new overview map

--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -92,8 +92,8 @@
 
                 <div class="col-md-6" id="netcdf_box">
                     <div class="card mb-4 box-shadow">
-                        <a id="id_overview_link" href="/media/{{val.id}}/overview.png" class="center-text mt-3">
-                            <img id="id_overview" class="card-img-top figure-thumb" alt="NetCDF visualisation" src="/media/{{val.id}}/overview.png">
+                        <a id="id_overview_link" href="/media/{{val.id}}/overview_R.png" class="center-text mt-3">
+                            <img id="id_overview" class="card-img-top figure-thumb" alt="NetCDF visualisation" src="/media/{{val.id}}/overview_R.png">
                         </a>
                         <div class="card-body">
                             <p class="card-text">NetCDF file containing all calculated metrics.</p>
