Tell users resetting their password how long the reset link will be valid

--- a/validator/templates/auth/password_reset_email.html
+++ b/validator/templates/auth/password_reset_email.html
@@ -6,4 +6,6 @@ Please go to the following page and choose a new password:
 {% endblock %}
 Your username is: {{ user.get_username }}
 
+The link above will be valid for {{ password_reset_timeout_days }} day{{ password_reset_timeout_days|pluralize:",s" }}.
+
 Your QA4SM team
