--- a/validator/templates/validator/index.html
+++ b/validator/templates/validator/index.html
@@ -112,10 +112,10 @@
                     <img class="scaled_image img-screen" id="serviceScreenshot1" alt="Validate" src="{% static 'images/validate.png' %}">
                 </div>
                 <div class="col-md-4">
-                    <img class="scaled_image img-screen" id="serviceScreenshot2" alt="Results" src="{% static 'images/list.png' %}">
+                    <img class="scaled_image img-screen" id="serviceScreenshot2" alt="Results" src="{% static 'images/validation_result_list5.png' %}">
                 </div>
                 <div class="col-md-4">
-                    <img class="scaled_image img-screen" id="serviceScreenshot3" alt="Download and Visualize" src="{% static 'images/download.png' %}">
+                    <img class="scaled_image img-screen" id="serviceScreenshot3" alt="Download and Visualize" src="{% static 'images/validation_result_details2.png' %}">
                 </div>
             </div>
 
