QA4SM-235 add the ffg logo to the landing page

--- a/validator/templates/validator/index.html
+++ b/validator/templates/validator/index.html
@@ -64,6 +64,7 @@
         <div class="container-marketing">
 
             <div class="overflow">
+            	<a href="https://www.ffg.at/"><img src="{% static 'images/logo_ffg.png' %}"></a>
                 <a href="https://www.eodc.eu/"><img src="{% static 'images/logo_eodc.png' %}"></a>
                 <a href="https://www.awst.at/"><img src="{% static 'images/logo_awst.png' %}"></a>
                 <a href="https://www.geo.tuwien.ac.at/"><img src="{% static 'images/logo_tuwien_geo.png' %}"></a>
@@ -112,10 +113,10 @@
                     <img class="scaled_image img-screen" id="serviceScreenshot1" alt="Validate" src="{% static 'images/validate.png' %}">
                 </div>
                 <div class="col-md-4">
-                    <img class="scaled_image img-screen" id="serviceScreenshot2" alt="Results" src="{% static 'images/validation_result_list5.png' %}">
+                    <img class="scaled_image img-screen" id="serviceScreenshot2" alt="Results" src="{% static 'images/validation_result_list.png' %}">
                 </div>
                 <div class="col-md-4">
-                    <img class="scaled_image img-screen" id="serviceScreenshot3" alt="Download and Visualize" src="{% static 'images/validation_result_details2.png' %}">
+                    <img class="scaled_image img-screen" id="serviceScreenshot3" alt="Download and Visualize" src="{% static 'images/validation_result_details.png' %}">
                 </div>
             </div>
 
