Adapting my results page to new database schema

--- a/validator/static/css/scheme.css
+++ b/validator/static/css/scheme.css
@@ -101,8 +101,8 @@ a:hover {
 
 .btn-action {
     width: 2.4em;
-    margin-top: 0.05em;
-    margin-bottom: 0.05em;
+    margin-top: 0.2rem;
+    margin-bottom: 0.2rem;
 }
 
 .scaled_image {
