--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -2,41 +2,54 @@
 
 {% block content %}
 
-    <div class="container center-text">
-        <div class="card-deck">
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">My Validations</h4>
-                </div>
-                <div class="card-body">
+<div class="container">
 
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Started</th>
-                            <th>Name</th>
-                            <th>Dataset</th>
-                            <th>Reference</th>
-                            <th>Status</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for valrun in myruns %}
-                        <tr id="result_row_{{ valrun.id }}">
-                            <td>{{ valrun.start_time }}</td>
-                            <td>{{ valrun.name_tag }}</td>
-                            <td>{{ valrun.data_dataset }} ({{ valrun.data_version }})</td>
-                            <td>{{ valrun.ref_dataset }} ({{ valrun.ref_version }})</td>
-                            <td {% if valrun.progress != 100 and valrun.end_time != null %}class="table-danger"{% endif %}>
+    <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
+        <h1 class="jumbotron-heading">My validations</h1>
+    </div>
+
+    <div class="card-deck mb-3">
+        <div class="col">
+            {% for valrun in myruns %}
+                <div class="card mb-4 mx-0 box-shadow" id="result_row_{{ valrun.id }}">
+                    <div class="card-header">
+                        <h5 class="my-0" style="float: left"><span class=" font-weight-normal">Started:</span> {{ valrun.start_time }}</h5>
+                        {% if valrun.name_tag %}
+                            <h5 class="my-0" style="float: right"><span class=" font-weight-normal">Name:</span> {{ valrun.name_tag }}</h5>
+                        {% endif %}
+                    </div>
+                    <div class="card-body" style="padding: 0.5rem 1.25rem;">
+                        <div class="row" style="justify-content: space-between;">
+
+                            <div class="col">
+                                <strong>Data:</strong><br/>
+                                {% for dc in valrun.dataset_configurations.all %}
+                                    {% if dc.id != valrun.reference_configuration.id %}
+                                        {{ dc.dataset.pretty_name }},
+                                        {{ dc.version.pretty_name }},
+                                        {{ dc.variable.pretty_name }}<br/>
+                                    {% endif %}
+                                {% endfor %}
+                            </div>
+
+                            <div class="col">
+                                <strong>Reference:</strong><br/>
+                                {{ valrun.reference_configuration.dataset.pretty_name }},
+                                {{ valrun.reference_configuration.version.pretty_name }},
+                                {{ valrun.reference_configuration.variable.pretty_name }}
+                            </div>
+
+                            <div class="col" style="max-width: 7rem;">
+                                <strong>Status:</strong><br/>
                                 {% if valrun.progress == 0 and valrun.end_time == null %} Scheduled
                                 {% elif valrun.progress == 100 %} Done
                                 {% elif valrun.progress == -1 %} Aborted
                                 {% elif valrun.end_time != null %} ERROR
                                 {% else %} Running ({{ valrun.progress }}&#37;)
                                 {% endif %}
-                            </td>
-                            <td>
+                            </div>
+
+                            <div class="col" style="text-align: right; max-width: 6.8rem;">
                                 <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
                                 {% if valrun.progress > -1 and valrun.progress < 100 and valrun.end_time == null %}
                                 <button class="btn btn-sm btn-primary btn-action" title="Stop validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
@@ -49,38 +62,83 @@
                                 {% if valrun.end_time %}
                                     <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}')"><span class="fas fa-times"></span></button>
                                 {% endif %}
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-
-                {% if myruns.has_other_pages %}
-                    <ul class="pagination">
-                    {% if myruns.has_previous %}
-                        <li><a href="?page={{ myruns.previous_page_number }}">&laquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&laquo;</span></li>
-                    {% endif %}
-                    {% for i in myruns.paginator.page_range %}
-                        {% if myruns.number == i %}
-                            <li class="active"><span>{{ i }}&nbsp;<span class="sr-only">(current)</span> </span> </li>
-                        {% else %}
-                            <li><a href="?page={{ i }}">{{ i }}&nbsp;</a></li>
-                        {% endif %}
-                    {% endfor %}
-                    {% if myruns.has_next %}
-                        <li><a href="?page={{ myruns.next_page_number }}">&raquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&raquo;</span></li>
-                    {% endif %}
-                    </ul>
-                {% endif %}
-
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            {% endfor %}
             </div>
         </div>
+
+        {% if myruns.has_other_pages %}
+            <ul class="pagination">
+            {% if myruns.has_previous %}
+                <li><a href="?page={{ myruns.previous_page_number }}">&laquo;</a></li>
+            {% else %}
+                <li class="disabled"><span>&laquo;</span></li>
+            {% endif %}
+            {% for i in myruns.paginator.page_range %}
+                {% if myruns.number == i %}
+                    <li class="active"><span>{{ i }}&nbsp;<span class="sr-only">(current)</span> </span> </li>
+                {% else %}
+                    <li><a href="?page={{ i }}">{{ i }}&nbsp;</a></li>
+                {% endif %}
+            {% endfor %}
+            {% if myruns.has_next %}
+                <li><a href="?page={{ myruns.next_page_number }}">&raquo;</a></li>
+            {% else %}
+                <li class="disabled"><span>&raquo;</span></li>
+            {% endif %}
+            </ul>
+        {% endif %}
     </div>
+
+<!--     <table class="table table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th>Started</th>
+                <th>Name</th>
+                <th>Dataset</th>
+                <th>Reference</th>
+                <th>Status</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for valrun in myruns %}
+            <tr id="result_row_{{ valrun.id }}">
+                <td>{{ valrun.start_time }}</td>
+                <td>{{ valrun.name_tag }}</td>
+                <td>{{ valrun.data_dataset }} ({{ valrun.data_version }})</td>
+                <td>{{ valrun.ref_dataset }} ({{ valrun.ref_version }})</td>
+                <td {% if valrun.progress != 100 and valrun.end_time != null %}class="table-danger"{% endif %}>
+                    {% if valrun.progress == 0 and valrun.end_time == null %} Scheduled
+                    {% elif valrun.progress == 100 %} Done
+                    {% elif valrun.progress == -1 %} Aborted
+                    {% elif valrun.end_time != null %} ERROR
+                    {% else %} Running ({{ valrun.progress }}&#37;)
+                    {% endif %}
+                </td>
+                <td>
+                    <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
+                    {% if valrun.progress > -1 and valrun.progress < 100 and valrun.end_time == null %}
+                    <button class="btn btn-sm btn-primary btn-action" title="Stop validation" onclick="ajax_stop_validation('{{ valrun.id }}')"><span class="fas fa-stop"></span></button>
+                    {% endif %}
+                    {% if valrun.end_time and valrun.output_file %}
+                        <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_dir_url }}graphs.zip" title="Download all graphs"><span class="fas fa-download"></span></a>
+                        <a class="btn btn-sm btn-primary btn-action" href="{{ valrun.output_file.url }}" title="Download NetCDF"><span class="fas fa-file-download"></span></a>
+                    {% endif %}
+
+                    {% if valrun.end_time %}
+                        <button class="btn btn-sm btn-primary btn-action" title="Remove result" onclick="ajax_delete_result('{{ valrun.id }}')"><span class="fas fa-times"></span></button>
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+ -->
+
 {% endblock %}
 
 {% block javascript %}
@@ -98,9 +156,7 @@
             $.ajax({
                 url: url,
                 type: 'DELETE',
-                success: function (return_data) {
-                    $('#result_row_'+result_id).remove()
-                }
+                success: function (return_data) { $('#result_row_'+result_id).remove() }
             });
         }
 
@@ -111,17 +167,13 @@
             var url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}".replace('00000000-0000-0000-0000-000000000000', result_id);
 
             $.ajaxSetup({
-                headers : {
-                    "X-CSRFToken" : '{{csrf_token}}'
-                }
+                headers : { "X-CSRFToken" : '{{csrf_token}}' }
             });
 
             $.ajax({
                 url : url,
                 type : 'DELETE',
-                success : function(return_data) {
-                    location.reload();
-                }
+                success : function(return_data) { location.reload(); }
             });
         }
     </script>
